--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   database:
     image: "postgres:16.9-bullseye"
+    container_name: TrelloClone
     ports:
       - ${POSTGRES_PORT}:5432
 
