--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:up": "docker compose up -d && sleep 2 && npx ts-node ./node_modules/.bin/knex migrate:latest",
+    "db:down": "docker compose down",
+    "db:seed": "npx ts-node ./node_modules/.bin/knex seed:run"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.10",
+    "@types/express": "^5.0.3",
     "jest": "^30.0.5",
     "typescript": "^5.9.2"
   },
@@ -19,6 +22,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "knex": "^3.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "ts-node": "^10.9.2"
   }
 }
